--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
 	id 'fabric-loom' version '0.8-SNAPSHOT'
 	id 'maven-publish'
-	id 'io.github.juuxel.loom-quiltflower' version '1.1.1'
+//	id 'io.github.juuxel.loom-quiltflower' version '1.1.1'
 }
 
 sourceCompatibility = JavaVersion.VERSION_16
