--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,8 @@ org.gradle.jvmargs=-Xmx1G
 # Mod Properties
 	mod_version = 1.0.0
 	maven_group = net.ignoramuses
-	archives_base_name = bingBingWahoo
+	archives_base_name = BingBingWahoo
 
 # Dependencies
 	fabric_version=0.34.9+1.17
+	cloth_config_version = 5.0.34
