more configurable stuff

--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ org.gradle.jvmargs=-Xmx1G
 # Mod Properties
 	mod_version = 1.0.0
 	maven_group = net.ignoramuses
-	archives_base_name = BingBingWahoo
+	archives_base_name = bingBingWahoo
 
 # Dependencies
 	fabric_version=0.34.9+1.17
