--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,8 @@ group = project.maven_group
 repositories {
 	maven { url "https://maven.shedaniel.me/" }
 	maven { url "https://maven.terraformersmc.com/releases/" }
+	maven { url "https://aperlambda.github.io/maven" }
+//	maven { url "https://maven.gegy.dev" }
 }
 
 dependencies {
@@ -28,6 +30,8 @@ dependencies {
 	modApi("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}") {
 		exclude(group: "net.fabricmc.fabric-api")
 	}
+
+//	modApi("dev.lambdaurora:lambdacontrols:${project.lambdacontrols_version}")
 
 	modImplementation("com.terraformersmc:modmenu:2.0.2")
 }
