--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,4 @@ org.gradle.jvmargs=-Xmx1G
 # Dependencies
 	fabric_version=0.34.9+1.17
 	cloth_config_version = 5.0.34
+#	lambdacontrols_version = 1.7.1+1.17
