--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
 	id 'fabric-loom' version '0.8-SNAPSHOT'
 	id 'maven-publish'
-//	id 'io.github.juuxel.loom-quiltflower' version '1.1.1'
+	id 'io.github.juuxel.loom-quiltflower' version '1.1.1'
 }
 
 sourceCompatibility = JavaVersion.VERSION_16
@@ -11,20 +11,36 @@ archivesBaseName = project.archives_base_name
 version = project.mod_version
 group = project.maven_group
 
+String getTerraformersMCMaven() { // thanks LambdAurora
+	def terraformersUrl = 'https://maven.terraformersmc.com/'
+	if (pingUrl(terraformersUrl))
+		return terraformersUrl
+	else
+		return 'https://maven.kotlindiscord.com/repository/terraformers/'
+}
+
+boolean pingUrl(String address) {
+	try {
+		def conn = (HttpURLConnection) new URL(address).openConnection()
+		int responseCode = conn.getResponseCode()
+		return (200 <= responseCode && responseCode <= 399)
+	} catch (IOException ignored) {
+		return false
+	}
+}
+
 repositories {
 	maven { url "https://maven.shedaniel.me/" }
-	maven { url "https://maven.terraformersmc.com/releases/" }
+	maven { url getTerraformersMCMaven() }
 	maven { url "https://aperlambda.github.io/maven" }
 //	maven { url "https://maven.gegy.dev" }
 }
 
 dependencies {
-	// To change the versions see the gradle.properties file
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
-	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
 	modImplementation("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}") {
@@ -45,20 +61,12 @@ processResources {
 }
 
 tasks.withType(JavaCompile).configureEach {
-	// ensure that the encoding is set to UTF-8, no matter what the system default is
-	// this fixes some edge cases with special characters not displaying correctly
-	// see http://yodaconditions.net/blog/fix-for-java-file-encoding-problems-with-gradle.html
-	// If Javadoc is generated, this must be specified in that task too.
 	it.options.encoding = "UTF-8"
 
-	// Minecraft 1.17 (21w19a) upwards uses Java 16.
 	it.options.release = 16
 }
 
 java {
-	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
-	// if it is present.
-	// If you remove this line, sources will not be generated.
 	withSourcesJar()
 }
 
