--- a/gradle.properties
+++ b/gradle.properties
@@ -8,11 +8,12 @@ org.gradle.jvmargs=-Xmx1G
 	loader_version=0.11.6
 
 # Mod Properties
-	mod_version = 1.1.0
+	mod_version = 1.1.1
 	maven_group = net.ignoramuses
 	archives_base_name = bingBingWahoo
 
 # Dependencies
 	fabric_version=0.37.0+1.17
 	cloth_config_version = 5.0.34
+	trinkets_version = 3.0.1
 #	lambdacontrols_version = 1.7.1+1.17
