--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,11 @@
 plugins {
-	id 'fabric-loom' version '0.8-SNAPSHOT'
+	id 'fabric-loom' version '0.10-SNAPSHOT'
 	id 'maven-publish'
-	id 'io.github.juuxel.loom-quiltflower' version '1.3.0'
+	id 'io.github.juuxel.loom-quiltflower-mini' version '1.+'
 }
 
-sourceCompatibility = JavaVersion.VERSION_16
-targetCompatibility = JavaVersion.VERSION_16
+sourceCompatibility = JavaVersion.VERSION_17
+targetCompatibility = JavaVersion.VERSION_17
 
 archivesBaseName = project.archives_base_name
 version = project.mod_version
@@ -50,8 +50,8 @@ dependencies {
 	}
 
 //	modApi("dev.lambdaurora:lambdacontrols:${project.lambdacontrols_version}")
-	modImplementation "dev.emi:trinkets:${trinkets_version}"
-	modImplementation("com.terraformersmc:modmenu:2.0.2")
+//	modImplementation "dev.emi:trinkets:${trinkets_version}"
+	modImplementation("com.terraformersmc:modmenu:3.0.0")
 }
 
 processResources {
@@ -65,7 +65,7 @@ processResources {
 tasks.withType(JavaCompile).configureEach {
 	it.options.encoding = "UTF-8"
 
-	it.options.release = 16
+	it.options.release = 17
 }
 
 java {
