--- a/gradle.properties
+++ b/gradle.properties
@@ -3,17 +3,17 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	minecraft_version=1.18-pre5
-	yarn_mappings=1.18-pre5+build.2
-	loader_version=0.12.5
+minecraft_version = 1.18.1
+mappings_version = 2
+loader_version = 0.12.12
 
 # Mod Properties
-	mod_version = 1.2.0
-	maven_group = net.ignoramuses
-	archives_base_name = bingBingWahoo
+mod_version = 1.3.0
+maven_group = net.ignoramuses
+archives_base_name = bingBingWahoo
 
 # Dependencies
-	fabric_version=0.42.8+1.18
-	cloth_config_version = 6.0.42
-	trinkets_version = 3.0.1
-#	lambdacontrols_version = 1.7.1+1.17
+fabric_version=0.44.0+1.18
+cloth_config_version = 6.1.48
+trinkets_version = 3.1.0
+mod_menu_version = 3.0.0
