--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ version = project.mod_version
 group = project.maven_group
 
 repositories {
+	maven { url = "https://api.modrinth.com/maven" }
 	maven { url = "https://maven.shedaniel.me/" }
 	maven { url = "https://maven.terraformersmc.com/" }
 	maven { url = "https://aperlambda.github.io/maven" }
@@ -27,6 +28,8 @@ dependencies {
 	modImplementation("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}") { exclude(group: "net.fabricmc.fabric-api")}
 	modImplementation("dev.emi:trinkets:${project.trinkets_version}")
 	modImplementation("com.terraformersmc:modmenu:${project.mod_menu_version}")
+	modImplementation("maven.modrinth:lazydfu:0.1.2")
+	modImplementation("maven.modrinth:here-be-no-dragons:1.0.0")
 }
 
 processResources {
