basic capturing complete

--- a/gradle.properties
+++ b/gradle.properties
@@ -17,3 +17,9 @@ fabric_version=0.44.0+1.18
 cloth_config_version = 6.1.48
 trinkets_version = 3.1.0
 mod_menu_version = 3.0.0
+# https://github.com/Ladysnake/PlayerAbilityLib/releases
+pal_version = 1.5.0
+# https://github.com/Draylar/omega-config/releases/tag/1.2.2-1.18.1
+omega_config_version = 1.2.2-1.18.1
+# https://www.curseforge.com/minecraft/mc-mods/identity/files
+identity_version = 3601799
