--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,8 @@ repositories {
 	maven { url = "https://aperlambda.github.io/maven" }
 	maven { url = "https://ladysnake.jfrog.io/artifactory/mods" }
 	maven { url = "https://maven.kotlindiscord.com/repository/terraformers/" }
+	maven { url = "https://cursemaven.com" }
+	maven { url 'https://jitpack.io' }
 }
 
 dependencies {
@@ -25,7 +27,11 @@ dependencies {
 	mappings("net.fabricmc:yarn:${project.minecraft_version}+build.${project.mappings_version}:v2")
 	modImplementation("net.fabricmc:fabric-loader:${project.loader_version}")
 	modImplementation("net.fabricmc.fabric-api:fabric-api:${project.fabric_version}")
-	modImplementation("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}") { exclude(group: "net.fabricmc.fabric-api")}
+	modImplementation("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}") { exclude(group: "net.fabricmc.fabric-api") }
+
+	modImplementation("io.github.ladysnake:PlayerAbilityLib:${project.pal_version}")
+	modImplementation("com.github.Draylar.omega-config:omega-config-base:${project.omega_config_version}")
+	modImplementation("curse.maven:identity-391390:${project.identity_version}")
 	modImplementation("dev.emi:trinkets:${project.trinkets_version}")
 	modImplementation("com.terraformersmc:modmenu:${project.mod_menu_version}")
 	modImplementation("maven.modrinth:lazydfu:0.1.2")
