--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,11 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
+org.gradle.jvmargs=-Xmx2G
 
 # Fabric Properties
-	# check these on https://fabricmc.net/use
-minecraft_version = 1.18.1
+# check these on https://fabricmc.net/develop/
+minecraft_version = 1.18.2
 mappings_version = 2
-loader_version = 0.12.12
+loader_version = 0.13.3
 
 # Mod Properties
 mod_version = 2.0.0
@@ -13,13 +13,10 @@ maven_group = net.ignoramuses
 archives_base_name = bingBingWahoo
 
 # Dependencies
-fabric_version=0.44.0+1.18
-cloth_config_version = 6.1.48
-trinkets_version = 3.1.0
-mod_menu_version = 3.0.0
-# https://github.com/Ladysnake/PlayerAbilityLib/releases
-pal_version = 1.5.0
-# https://github.com/Draylar/omega-config/releases/tag/1.2.2-1.18.1
-omega_config_version = 1.2.2-1.18.1
-# https://www.curseforge.com/minecraft/mc-mods/identity/files
-identity_version = 3601799
+fabric_version=0.48.0+1.18.2
+# https://www.curseforge.com/minecraft/mc-mods/cloth-config/files
+cloth_config_version = 6.2.57
+# https://github.com/emilyploszaj/trinkets/releases/tag/3.3.0
+trinkets_version = 3.3.0
+# https://modrinth.com/mod/modmenu/versions
+mod_menu_version = 3.1.0
