--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,11 @@
+//file:noinspection GroovyAssignabilityCheck
+//file:noinspection GroovyAccessibility
 plugins {
-	id 'fabric-loom' version '0.10-SNAPSHOT'
-	id 'maven-publish'
-	id 'io.github.juuxel.loom-quiltflower-mini' version '1.+'
+	id "fabric-loom" version "0.12-SNAPSHOT"
+	id "io.github.juuxel.loom-quiltflower" version "1.+"
+	id "org.quiltmc.quilt-mappings-on-loom" version "4.+"
+	id "org.ajoberstar.grgit" version "4.1.1"
+	id "maven-publish"
 }
 
 sourceCompatibility = JavaVersion.VERSION_17
@@ -11,6 +15,12 @@ archivesBaseName = project.archives_base_name
 version = project.mod_version
 group = project.maven_group
 
+if (grgit != null) {
+	version += "+${grgit.getBranch().current().name}.${grgit.head().abbreviatedId}"
+} else {
+	version += "+custom_unknown"
+}
+
 repositories {
 	maven { url = "https://api.modrinth.com/maven" }
 	maven { url = "https://maven.shedaniel.me/" }
@@ -19,7 +29,7 @@ repositories {
 	maven { url = "https://ladysnake.jfrog.io/artifactory/mods" }
 	maven { url = "https://maven.kotlindiscord.com/repository/terraformers/" }
 	maven { url = "https://cursemaven.com" }
-	maven { url 'https://jitpack.io' }
+	maven { url =  "https://jitpack.io" }
 }
 
 dependencies {
@@ -29,24 +39,42 @@ dependencies {
 	modImplementation("net.fabricmc.fabric-api:fabric-api:${project.fabric_version}")
 	modImplementation("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}") { exclude(group: "net.fabricmc.fabric-api") }
 
-	modImplementation("dev.emi:trinkets:${project.trinkets_version}")
-	modImplementation("com.terraformersmc:modmenu:${project.mod_menu_version}")
+	modCompileOnly("dev.emi:trinkets:${project.trinkets_version}")
+	modCompileOnly("com.terraformersmc:modmenu:${project.mod_menu_version}")
 	modImplementation("maven.modrinth:lazydfu:0.1.2")
 	modImplementation("maven.modrinth:here-be-no-dragons:1.0.0")
 }
 
+task buildOrPublish {
+	group = "build"
+	String mavenUser = System.getenv().MAVEN_USER
+	if (mavenUser != null && !mavenUser.isEmpty()) {
+		dependsOn(tasks.getByName("publish"))
+		println "prepared for publish"
+	} else {
+		dependsOn(tasks.getByName("build"))
+		println "prepared for build"
+	}
+}
+
 processResources {
-	inputs.property "version", project.version
+	Map<String, String> properties = new HashMap<>()
+	properties.put("version", project.version)
+	properties.put("loader_version", project.loader_version)
+	properties.put("fabric_version", project.fabric_version)
+	properties.put("minecraft_version", project.minecraft_version)
+	properties.put("java_version", sourceCompatibility)
+	properties.put("cloth_config_version", project.cloth_config_version)
+
+	properties.forEach((k, v) -> inputs.property(k, v))
 
 	filesMatching("fabric.mod.json") {
-		expand "version": project.version
+		expand properties
 	}
 }
 
 tasks.withType(JavaCompile).configureEach {
-	it.options.encoding = "UTF-8"
-
-	it.options.release = 17
+	it.options.release = Integer.parseInt(sourceCompatibility)
 }
 
 java {
@@ -67,18 +95,15 @@ publishing {
 	}
 
 	repositories {
-		String suffix = System.getenv().PUBLISH_SUFFIX // 'releases' or 'snapshots'
-		if (suffix == null || suffix.isEmpty()) {
-			System.out.println("Failed to publish to maven!")
-			return
-		}
 		maven {
-			url = "https://maven.devos.community/${suffix}/"
+			url = "https://maven.devos.community/${System.getenv().PUBLISH_SUFFIX}/"
 			credentials {
 				username = System.getenv().MAVEN_USER
 				password = System.getenv().MAVEN_PASS
 			}
-			authentication { basic(BasicAuthentication) }
+			authentication {
+				basic(BasicAuthentication)
+			}
 		}
 	}
 }
