--- a/settings.gradle
+++ b/settings.gradle
@@ -1,15 +1,9 @@
 pluginManagement {
     repositories {
-        maven {
-            name = 'Fabric'
-            url = 'https://maven.fabricmc.net/'
-        }
-
+        maven { url = "https://maven.fabricmc.net/" }
+        maven { url = "https://server.bbkr.space/artifactory/libs-release/" }
+        maven { url = "https://maven.quiltmc.org/repository/release" }
+        mavenCentral()
         gradlePluginPortal()
-
-        maven {
-            name = 'Cotton'
-            url = 'https://server.bbkr.space/artifactory/libs-release/'
-        }
     }
 }
