--- a/gradle.properties
+++ b/gradle.properties
@@ -16,7 +16,10 @@ archives_base_name = bingBingWahoo
 fabric_version=0.48.0+1.18.2
 # https://www.curseforge.com/minecraft/mc-mods/cloth-config/files
 cloth_config_version = 6.2.57
-# https://github.com/emilyploszaj/trinkets/releases/tag/3.3.0
+# https://github.com/emilyploszaj/trinkets/releases/
 trinkets_version = 3.3.0
+# for trinkets
+# https://github.com/OnyxStudios/Cardinal-Components-API/releases
+cca_version = 4.1.4
 # https://modrinth.com/mod/modmenu/versions
 mod_menu_version = 3.1.0
