--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,13 @@ repositories {
 
 dependencies {
 	minecraft("com.mojang:minecraft:${project.minecraft_version}")
-	mappings("net.fabricmc:yarn:${project.minecraft_version}+build.${project.mappings_version}:v2")
+	mappings loom.layered {
+		it.addLayer(quiltMappings.mappings("org.quiltmc:quilt-mappings:1.18.2+build.21:v2")) // https://lambdaurora.dev/tools/import_quilt.html
+		it.parchment("org.parchmentmc.data:parchment-1.18.2:BLEEDING-20220313.132143-1@zip") // https://ldtteam.jfrog.io/ui/native/parchmentmc-public/org/parchmentmc/data/parchment-1.18.1/BLEEDING-SNAPSHOT
+		it.officialMojangMappings {
+			setNameSyntheticMembers(false)
+		}
+	}
 	modImplementation("net.fabricmc:fabric-loader:${project.loader_version}")
 
 	modImplementation("net.fabricmc.fabric-api:fabric-api:${project.fabric_version}")
