--- a/build.gradle
+++ b/build.gradle
@@ -46,7 +46,7 @@ dependencies {
 	modImplementation("net.fabricmc.fabric-api:fabric-api:${project.fabric_version}")
 	modImplementation("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}") { exclude(group: "net.fabricmc.fabric-api") }
 
-	modCompileOnly("dev.emi:trinkets:${project.trinkets_version}")
+	modImplementation("dev.emi:trinkets:${project.trinkets_version}")
 	modRuntimeOnly("dev.onyxstudios.cardinal-components-api:cardinal-components-base:${project.cca_version}")
 	modRuntimeOnly("dev.onyxstudios.cardinal-components-api:cardinal-components-entity:${project.cca_version}")
 
