--- a/build.gradle
+++ b/build.gradle
@@ -30,13 +30,14 @@ repositories {
 	maven { url = "https://maven.kotlindiscord.com/repository/terraformers/" }
 	maven { url = "https://cursemaven.com" }
 	maven { url =  "https://jitpack.io" }
+	maven { url = "https://maven.parchmentmc.org" }
 }
 
 dependencies {
 	minecraft("com.mojang:minecraft:${project.minecraft_version}")
 	mappings loom.layered {
 		it.addLayer(quiltMappings.mappings("org.quiltmc:quilt-mappings:1.18.2+build.21:v2")) // https://lambdaurora.dev/tools/import_quilt.html
-		it.parchment("org.parchmentmc.data:parchment-1.18.2:BLEEDING-20220313.132143-1@zip") // https://ldtteam.jfrog.io/ui/native/parchmentmc-public/org/parchmentmc/data/parchment-1.18.1/BLEEDING-SNAPSHOT
+		it.parchment("org.parchmentmc.data:parchment-1.18.2:BLEEDING-20220313.132143-1@zip") // https://ldtteam.jfrog.io/ui/native/parchmentmc-public/org/parchmentmc/data/parchment-1.18.2/BLEEDING-SNAPSHOT
 		it.officialMojangMappings {
 			setNameSyntheticMembers(false)
 		}
