--- a/build.gradle
+++ b/build.gradle
@@ -13,16 +13,13 @@ sourceCompatibility = JavaVersion.VERSION_17
 targetCompatibility = JavaVersion.VERSION_17
 
 archivesBaseName = project.archives_base_name
-version = project.mod_version
 group = project.maven_group
 
-if (grgit != null) {
-	version += "+${grgit.getBranch().current().name}.${grgit.head().abbreviatedId}"
-} else {
-	version += "+custom_unknown"
-}
+String buildNumber = System.getenv("GITHUB_RUN_NUMBER")
+version = project.mod_version + (buildNumber != null ? "-${buildNumber}" : "")
 
 repositories {
+	maven { url = "https://maven.quiltmc.org/repository/release" }
 	maven { url = "https://api.modrinth.com/maven" }
 	maven { url = "https://maven.shedaniel.me/" }
 	maven { url = "https://maven.terraformersmc.com/" }
@@ -36,26 +33,21 @@ repositories {
 
 dependencies {
 	minecraft("com.mojang:minecraft:${project.minecraft_version}")
-	mappings loom.layered {
-//		it.addLayer(quiltMappings.mappings("org.quiltmc:quilt-mappings:1.18.2+build.21:v2")) // https://lambdaurora.dev/tools/import_quilt.html
-		it.parchment("org.parchmentmc.data:parchment-1.18.2:BLEEDING-20220313.132143-1@zip") // https://ldtteam.jfrog.io/ui/native/parchmentmc-public/org/parchmentmc/data/parchment-1.18.2/BLEEDING-SNAPSHOT
-		it.officialMojangMappings {
-			setNameSyntheticMembers(false)
-		}
-	}
+	mappings(loom.layered {
+		it.mappings("org.quiltmc:quilt-mappings:${project.minecraft_version}+build.${project.qm_version}:intermediary-v2")
+		it.parchment("org.parchmentmc.data:parchment-${project.minecraft_version}:${project.parchment_version}@zip")
+		it.officialMojangMappings { nameSyntheticMembers = false }
+	})
 	modImplementation("net.fabricmc:fabric-loader:${project.loader_version}")
 
 	modImplementation("net.fabricmc.fabric-api:fabric-api:${project.fabric_version}")
 	modImplementation("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}") { exclude(group: "net.fabricmc.fabric-api") }
 
-	modImplementation("dev.emi:trinkets:${project.trinkets_version}")
-	modRuntimeOnly("dev.onyxstudios.cardinal-components-api:cardinal-components-base:${project.cca_version}")
-	modRuntimeOnly("dev.onyxstudios.cardinal-components-api:cardinal-components-entity:${project.cca_version}")
+	modImplementation("dev.emi:trinkets:${project.trinkets_version}") { exclude(group: "com.terraformersmc") }
+	modImplementation("com.terraformersmc:modmenu:${project.mod_menu_version}")
 
-	modCompileOnly("com.terraformersmc:modmenu:${project.mod_menu_version}")
-
-	modRuntimeOnly("maven.modrinth:lazydfu:0.1.2")
-	modRuntimeOnly("maven.modrinth:here-be-no-dragons:1.0.0")
+	modLocalRuntime("maven.modrinth:lazydfu:0.1.3")
+	modLocalRuntime("maven.modrinth:here-be-no-dragons:1.0.0")
 }
 
 task buildOrPublish {
