--- a/gradle.properties
+++ b/gradle.properties
@@ -3,22 +3,25 @@ org.gradle.jvmargs=-Xmx2G
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop/
-minecraft_version = 1.18.2
-loader_version = 0.13.3
+minecraft_version = 1.19.2
+loader_version = 0.14.10
 
 # Mod Properties
-mod_version = 2.0.0
+mod_version = 3.0.0
 maven_group = net.ignoramuses
 archives_base_name = bingBingWahoo
 
+# Mappings
+# https://lambdaurora.dev/tools/import_quilt.html
+qm_version = 21
+# https://parchmentmc.org/docs/getting-started
+parchment_version = 2022.11.06
+
 # Dependencies
-fabric_version=0.48.0+1.18.2
+fabric_version=0.66.0+1.19.2
 # https://www.curseforge.com/minecraft/mc-mods/cloth-config/files
-cloth_config_version = 6.2.57
+cloth_config_version = 8.2.88
 # https://github.com/emilyploszaj/trinkets/releases/
-trinkets_version = 3.3.0
-# for trinkets
-# https://github.com/OnyxStudios/Cardinal-Components-API/releases
-cca_version = 4.1.4
+trinkets_version = 3.4.0
 # https://modrinth.com/mod/modmenu/versions
-mod_menu_version = 3.1.0
+mod_menu_version = 4.1.0
