--- a/gradle.properties
+++ b/gradle.properties
@@ -19,8 +19,8 @@ parchment_version = 2022.11.06
 
 # Dependencies
 fabric_version=0.66.0+1.19.2
-# https://www.curseforge.com/minecraft/mc-mods/cloth-config/files
-cloth_config_version = 8.2.88
+# https://modrinth.com/mod/midnightlib
+midnightlib_version = 1.0.0-fabric
 # https://github.com/emilyploszaj/trinkets/releases/
 trinkets_version = 3.4.0
 # https://modrinth.com/mod/modmenu/versions
