--- a/gradle.properties
+++ b/gradle.properties
@@ -21,7 +21,13 @@ parchment_version = 2022.11.06
 fabric_version=0.66.0+1.19.2
 # https://modrinth.com/mod/midnightlib
 midnightlib_version = 1.0.0-fabric
+
+# Compat
+# https://modrinth.com/mod/automobility/
+automobility_version = 0.3+1.19.2
 # https://github.com/emilyploszaj/trinkets/releases/
 trinkets_version = 3.4.0
+
+# Dev Env
 # https://modrinth.com/mod/modmenu/versions
 mod_menu_version = 4.1.0
