--- a/gradle.properties
+++ b/gradle.properties
@@ -25,6 +25,8 @@ midnightlib_version = 1.0.0-fabric
 # Compat
 # https://modrinth.com/mod/automobility/
 automobility_version = 0.3+1.19.2
+arrp_version=0.6.2
+jsonem_version=0.1.2+1.19
 # https://github.com/emilyploszaj/trinkets/releases/
 trinkets_version = 3.4.0
 
