--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ loader_version = 0.14.10
 # Mod Properties
 mod_version = 3.0.0
 maven_group = net.ignoramuses
-archives_base_name = bingBingWahoo
+archives_base_name = BingBingWahoo
 
 # Mappings
 # https://lambdaurora.dev/tools/import_quilt.html
