--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ loader_version = 0.14.10
 
 # Mod Properties
 mod_version = 3.1.0
-maven_group = net.ignoramuses
+maven_group = io.github.ignoramuses
 archives_base_name = BingBingWahoo
 
 # Mappings
