--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ minecraft_version = 1.20
 loader_version = 0.14.21
 
 # Mod Properties
-mod_version = 4.0.0
+mod_version = 4.1.0
 maven_group = io.github.ignoramuses
 archives_base_name = BingBingWahoo
 
@@ -22,9 +22,8 @@ midnightlib_version = 1.4.1-fabric
 
 # Compat
 # https://modrinth.com/mod/automobility/
-automobility_version = 0.3+1.19.2
-arrp_version=0.6.2
-jsonem_version=0.1.2+1.19
+automobility_version = 0.4.2+1.20.1-fabric
+jsonem_version=0.2.1+1.20
 # https://github.com/emilyploszaj/trinkets/releases/
 trinkets_version = 3.7.0
 
