--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,43 +1,46 @@
 name: build
-on: [ pull_request, push ]
+on:
+  workflow_dispatch:
+    inputs:
+      publish:
+        description: Publish to Modrinth
+        required: true
+        default: "false"
+  pull_request:
+  push:
 
 jobs:
   build:
-    strategy:
-      matrix:
-        java: [ 17 ]
     runs-on: ubuntu-latest
     env:
       PUBLISH_SUFFIX: snapshots
       MAVEN_USER: ${{ secrets.MAVEN_USER }}
       MAVEN_PASS: ${{ secrets.MAVEN_PASS }}
+      MODRINTH_TOKEN: ${{ secrets.MODRINTH_TOKEN }}
     steps:
 
       - name: checkout repository
-        uses: actions/checkout@v2
-
-      - name: setup jdk ${{ matrix.java }}
-        uses: actions/setup-java@v1
-        with:
-          java-version: ${{ matrix.java }}
-
-      - uses: actions/cache@v2
-        with:
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/loom-cache
-            ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/gradle-wrapper.properties') }}
-          restore-keys: ${{ runner.os }}-gradle
+        uses: actions/checkout@v3
 
       - name: make gradle wrapper executable
         run: chmod +x ./gradlew
+
+      - name: setup Java
+        uses: actions/setup-java@v3
+        with:
+          distribution: temurin
+          java-version: 17
+          cache: gradle
 
       - name: build
         run: ./gradlew buildOrPublish
 
       - name: capture build artifacts
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: Artifacts
           path: build/libs/
+
+      - name: publish to Modrinth
+        if: ${{ github.event.inputs.publish }}
+        run: ./gradlew modrinth
