--- a/gradle.properties
+++ b/gradle.properties
@@ -4,6 +4,7 @@ org.gradle.jvmargs=-Xmx2G
 # Fabric Properties
 # check these on https://fabricmc.net/develop/
 minecraft_version = 1.20
+compatible_minecraft_versions = 1.20,1.20.1
 loader_version = 0.14.21
 
 # Mod Properties
