--- a/build.gradle
+++ b/build.gradle
@@ -84,6 +84,10 @@ processResources {
 	filesMatching("fabric.mod.json") {
 		expand properties
 	}
+
+	filesMatching("bingbingwahoo.mixins.json") {
+		expand "archivesBaseName": archivesBaseName
+	}
 }
 
 tasks.withType(JavaCompile).configureEach {
