--- a/build.gradle
+++ b/build.gradle
@@ -23,11 +23,11 @@ repositories {
 	maven { url = "https://maven.shedaniel.me/" }
 	maven { url = "https://maven.terraformersmc.com/" }
 	maven { url = "https://aperlambda.github.io/maven" }
-	maven { url = "https://ladysnake.jfrog.io/artifactory/mods" }
 	maven { url = "https://maven.kotlindiscord.com/repository/terraformers/" }
 	maven { url = "https://cursemaven.com" }
 	maven { url =  "https://jitpack.io" }
 	maven { url = "https://maven.parchmentmc.org" }
+	maven { url = "https://maven.ladysnake.org/releases" }
 }
 
 dependencies {
