--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 import java.nio.file.Files
 
 plugins {
-	id "fabric-loom" version "1.0.+"
-	id "io.github.juuxel.loom-quiltflower" version "1.+" // Quiltflower, a better decompiler
+	id "fabric-loom" version "1.3.+"
+	id "io.github.juuxel.loom-vineflower" version "1.+" // Quiltflower, a better decompiler
 	id "io.github.p03w.machete" version "1.+" // automatic jar compressing on build
 	id "com.modrinth.minotaur" version "2.+"
 	id "maven-publish"
@@ -40,7 +40,6 @@ dependencies {
 
 	// deps
 	modImplementation("net.fabricmc.fabric-api:fabric-api:${project.fabric_version}")
-	modImplementation(include("maven.modrinth:midnightlib:${project.midnightlib_version}"))
 
 	// compat
 	modCompileOnly("dev.emi:trinkets:${project.trinkets_version}") { exclude(group: "com.terraformersmc") }
@@ -70,6 +69,14 @@ tasks.register("buildOrPublish") {
 	}
 }
 
+loom {
+	runs {
+		configureEach {
+			it.vmArg("-Dmixin.debug.export=true")
+		}
+	}
+}
+
 processResources {
 	exclude("assets/bingbingwahoo/icon_compressed.png")
 
@@ -77,8 +84,7 @@ processResources {
 			"version": version,
 			"loader_version": loader_version,
 			"fabric_version": fabric_version,
-			"minecraft_version": minecraft_version,
-			"midnightlib_version": midnightlib_version
+			"minecraft_version": minecraft_version
 	]
 
 	properties.forEach((k, v) -> inputs.property(k, v))
