--- a/gradle.properties
+++ b/gradle.properties
@@ -1,23 +1,19 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx2G
 
-# Fabric Properties
-# check these on https://fabricmc.net/develop
 minecraft_version = 1.20.1
 compatible_minecraft_versions = 1.20.1
-loader_version = 0.14.21
 
 # Mod Properties
 mod_version = 5.0.0
 maven_group = io.github.ignoramuses
 archives_base_name = BingBingWahoo
 
-# Mappings
+# Quilt Stuff
 # https://lambdaurora.dev/tools/import_quilt.html
+loader_version = 0.20.1
+qfapi_version = 7.1.2+0.87.0-1.20.1
 qm_version = 23
-
-# Dependencies
-fabric_version=0.87.0+1.20.1
 
 # Compat
 # https://modrinth.com/mod/automobility
